# midas-journal-729

ijmrcio/: CMakeLists.txt  itkGenericUtilities.h  itkLocalFactory.cxx  itkLocalFactory.h  itkMRCHeaderObject.cxx  itkMRCHeaderObject.h  itkMRCImageIO.cxx  itkMRCImageIO.h  itkPipelineMonitorImageFilter.h  itkStreamingImageIOBase.cxx  itkStreamingImageIOBase.h  itkVTKImageIO.cxx  itkVTKImageIO.h
ijmrcio/Utilities/FileUtilities/: CMakeLists.txt  FileUtilities.cpp  FileUtilities.h  FileUtilitiesConfigure.h.in  PathName.cpp  PathName.h
ijmrcio/Utilities/TestingFramework/: CMakeLists.txt  TestFrameworkConfigure.h.in  tfBase64.cpp  tfBase64.h  tfDiff.cpp  tfDiff.h  tfMeasurement.cpp  tfMeasurement.h  tfMeasurementVisitor.cpp  tfMeasurementVisitor.h  tfPipeToXML.cxx  tfRegressionTest.cpp  tfRegressionTest.h
ijmrcio/Utilities/TestingFramework/tests/: CMakeLists.txt  tfHeaderTest.cxx  tfRegressionTestArgumentsTest.cxx  tfRegressionTestOutputTest1.cxx  tfRegressionTestOutputTest2.cxx  tfRegressionTestTest1.cxx  tfRegressionTestTest2.cxx  tfRegressionTestTest3.cxx  tfRegressionTestTest4.cxx  tfTestSupport.h.in
ijmrcio/Utilities/TestingFramework/tests/data/: plain.txt
ijmrcio/Utilities/TestingFramework/tests/xml/: tfRegressionTestArgumentsTest1.xml  tfRegressionTestArgumentsTest2.xml  tfRegressionTestArgumentsTest3.xml  tfRegressionTestArgumentsTest4.xml  tfRegressionTestArgumentsTest5.xml  tfRegressionTestArgumentsTest6.xml  tfRegressionTestArgumentsTest7.xml  tfRegressionTestArgumentsTest8.xml  tfRegressionTestOutputTest1.xml  tfRegressionTestTest2.xml  tfRegressionTestTest3.xml  tfRegressionTestTest4.xml
ijmrcio/Utilities/itktf/: CMakeLists.txt  itktfCompareVisitor.cxx  itktfCompareVisitor.h  itktfDifferenceImageFilter.h  itktfDifferenceImageFilter.txx  itktfDifferenceVisitor.cxx  itktfDifferenceVisitor.h  itktfFilterWatcher.h  itktfRegression.cxx  itktfRegression.h  itktfRegressionSupport.h.in
ijmrcio/Utilities/itktf/Testing/: CMakeLists.txt  itktfDifferenceImageFilterTest.cxx  itktfMeasurementFileImageInsightTest1.cxx  itktfMeasurementFileImageInsightTest2.cxx  itktfMeasurementFileImageInsightTest3.cxx  itktfMeasurementFileImageInsightTest4.cxx  itktfMeasurementInsightRegionTest.cxx
ijmrcio/Utilities/itktf/Testing/XML/: itktfMeasurementFileImageInsightTest1.xml  itktfMeasurementFileImageInsightTest2.xml  itktfMeasurementFileImageInsightTest3.xml  itktfMeasurementFileImageInsightTest4.xml  itktfMeasurementInsightRegionTest.xml
ijmrcio/tests/: CMakeLists.txt  itkImageFileReaderInfoTest.cxx  itkImageFileReaderStreamingTest.cxx  itkImageFileStreamingTest.cxx  itkImageFileWriterPastingTest2.cxx  itkImageFileWriterStreamingPastingCompressingTest1.cxx  itkImageFileWriterStreamingTest1.cxx  itkImageFileWriterStreamingTest2.cxx  itkLocalRegressionSupport.h.in  itkMRCImageFileIOTest.cxx  itkVTKImageFileIOTest.cxx
ijmrcio/tests/Baseline/Data/: itkMRCImageFileIOTest_1.mrc  itkMRCImageFileIOTest_2.mrc  itkMRCImageFileIOTest_3.mrc  itkMRCImageFileIOTest_4.mrc  itkMRCImageFileIOTest_5.mrc  itkMRCImageFileIOTest_6.mrc  itkMRCImageFileIOTest_7.mrc  itkMRCImageFileIOTest_8.mrc  itkVTKImageFileIOTest_1.vtk  itkVTKImageFileIOTest_11.vtk  itkVTKImageFileIOTest_13.vtk  itkVTKImageFileIOTest_15.vtk  itkVTKImageFileIOTest_17.vtk  itkVTKImageFileIOTest_19.vtk  itkVTKImageFileIOTest_20.vtk  itkVTKImageFileIOTest_21.vtk  itkVTKImageFileIOTest_22.vtk  itkVTKImageFileIOTest_23.vtk  itkVTKImageFileIOTest_24.vtk  itkVTKImageFileIOTest_3.vtk  itkVTKImageFileIOTest_5.vtk  itkVTKImageFileIOTest_7.vtk  itkVTKImageFileIOTest_9.vtk
ijmrcio/tests/Baseline/XML/: itkImageFileReaderInfoTest_MRC1.xml  itkImageFileReaderInfoTest_VTK1.xml  itkImageFileReaderStreamingTest_MRC1.xml  itkImageFileReaderStreamingTest_MRC2.xml  itkImageFileStreamingTest_MRC.xml  itkImageFileStreamingTest_VTK.xml  itkImageFileWriterPastingTest2_MRC.xml  itkImageFileWriterPastingTest2_VTK.xml  itkImageFileWriterStreamingTest1_MRC.xml  itkImageFileWriterStreamingTest1_VTK.xml  itkMRCImageFileIOTest.xml  itkVTKImageFileIOTest.xml
ijmrcio/tests/Data/: HeadMRVolume.mrc  HeadMRVolume.vtk  tilt_series.mrc  vol_ascii.vtk
