PROJECT( FILEUTILITIES )

SET( FILEUTILITIES_LIB_SRC
  FileUtilities.cpp
  PathName.cpp
  )

INCLUDE_DIRECTORIES( "${FILEUTILITIES_BINARY_DIR}" )

ADD_LIBRARY( fileutil ${FILEUTILITIES_LIB_SRC} )

CONFIGURE_FILE("${FILEUTILITIES_SOURCE_DIR}/FileUtilitiesConfigure.h.in"
  "${FILEUTILITIES_BINARY_DIR}/FileUtilitiesConfigure.h" IMEDIATE) 
